<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".manager.manager_fragments.ManagerSettingsFragment">

    <LinearLayout
        android:padding="20dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_marginTop="30dp"
            android:layout_marginStart="2dp"
            android:textColor="@color/colorPrimary"
            android:fontFamily="@font/open_sans_bold"
            android:textSize="14sp"
            android:text="@string/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/settingsUsernameET"
            android:fontFamily="@font/open_sans_semibold"
            android:textSize="16sp"
            android:inputType="none"
            android:textIsSelectable="false"
            android:focusable="false"
            android:backgroundTint="@color/colorPrimary"
            android:layout_marginTop="3dp"
            android:layout_width="match_parent"
            android:layout_height="55dp"/>
        <TextView
            android:layout_marginStart="2dp"
            android:layout_marginTop="30dp"
            android:textColor="@color/colorPrimary"
            android:fontFamily="@font/open_sans_bold"
            android:textSize="14sp"
            android:text="@string/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/settingsUserIdET"
            android:inputType="none"
            android:fontFamily="@font/open_sans_semibold"
            android:textSize="16sp"
            android:textIsSelectable="false"
            android:focusable="false"
            android:backgroundTint="@color/colorPrimary"
            android:layout_marginTop="3dp"
            android:layout_width="match_parent"
            android:layout_height="55dp"/>
        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/logOutFAB"
            android:layout_marginTop="100dp"
            android:paddingStart="25dp"
            android:paddingEnd="25dp"
            android:backgroundTint="#E57373"
            app:icon="@drawable/logout"
            app:iconTint="@android:color/white"
            android:text="@string/log_out"
            android:textAllCaps="false"
            android:textSize="17sp"
            android:fontFamily="@font/open_sans_bold"
            android:textColor="@android:color/white"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</layout>