<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".authentication.LoginFragment">

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:id="@+id/loginFragContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutDescription="@xml/fragment_login_xml_constraintlayout3_scene">

        <ImageView
            android:id="@+id/logoIV"
            android:layout_width="170dp"
            android:layout_height="170dp"
            android:layout_marginTop="40dp"
            android:src="@drawable/logo_transparent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailTextField"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/email"
            android:textColorHint="@color/colorPrimary"
            app:layout_constraintTop_toBottomOf="@+id/logoIV">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimary"
                android:drawableStart="@drawable/ic_email_ico"
                android:drawablePadding="15dp"
                android:fontFamily="@font/open_sans_semibold"
                android:inputType="textEmailAddress"
                android:textSize="16sp"
                app:drawableTint="@color/colorPrimaryVariant" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordTextField"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/password"
            android:textColorHint="@color/colorPrimary"
            app:layout_constraintTop_toBottomOf="@+id/emailTextField"
            tools:layout_editor_absoluteX="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimary"
                android:drawableStart="@drawable/ic_password_ico"
                android:drawablePadding="15dp"
                android:drawingCacheQuality="high"
                android:fontFamily="@font/open_sans_semibold"
                android:inputType="textPassword"
                android:textSize="16sp"
                app:drawableTint="@color/colorPrimaryVariant" />
        </com.google.android.material.textfield.TextInputLayout>


        <RelativeLayout
            android:id="@+id/spinnerLayout"
            app:layout_constraintTop_toBottomOf="@+id/passwordTextField"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/spinner_unselected_bk">

            <Spinner
                android:id="@+id/accountTypeSpinner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/colorSecondary"
                android:entries="@array/accountTypeArray" />
        </RelativeLayout>

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/loginFAB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="50dp"
            android:backgroundTint="@color/colorSecondary"
            android:fontFamily="@font/open_sans_bold"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            app:icon="@drawable/enter_ico"
            app:iconPadding="15dp"
            app:iconTint="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinnerLayout"
            app:rippleColor="@color/colorPrimary" />

        <LinearLayout
            android:id="@+id/switchScreensLayout"
            android:layout_marginBottom="25dp"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:fontFamily="@font/open_sans"
                android:textSize="15sp"
                android:text="@string/don_t_have_an_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/switchToSignUpTV"
                android:clickable="true"
                android:focusable="true"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:textColor="@color/colorPrimaryVariant"
                android:textSize="15sp"
                android:fontFamily="@font/open_sans_bold"
                android:layout_marginStart="8dp"
                android:text="@string/sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/loginPrg"
            android:visibility="gone"
            android:background="@color/colorBackground"
            android:elevation="35dp"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ProgressBar
                android:layout_width="60dp"
                android:layout_height="60dp"/>
            <TextView
                android:id="@+id/progressMsg"
                android:textSize="16sp"
                android:text="@string/authenticating_please_wait"
                android:textColor="@color/colorSecondary"
                android:fontFamily="@font/open_sans_semibold"
                android:layout_marginTop="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

    </androidx.constraintlayout.motion.widget.MotionLayout>

</layout>